# qml-icon-fonts

./: .gitmodules  CMakeLists.txt  README.md
IconFonts/: CMakeLists.txt  FontAwesome.qml  Object.qml
example/: CMakeLists.txt  IconRow.qml  Main.qml  main.cpp
scripts/: make_fa.py  template_fa.qml
